--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "mongoose": "^7.3.4",
+    "mongoose-unique-validator": "^4.0.0",
     "morgan": "^1.10.0",
     "uuid": "^9.0.0"
   },
